# samba-documents-provider

./: .gitignore  README.md  build.gradle  groups  project.config  sambapatch.diff
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/google/android/sambadocumentsprovider/encryption/: EncryptionManagerTests.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/base/: Callback.h
app/src/main/cpp/credential_cache/: CredentialCache.cc  CredentialCache.h
app/src/main/cpp/jni_helper/: JavaClassCache.cc  JavaClassCache.h  JniCallback.h  JniHelper.cc  JniHelper.h
app/src/main/cpp/logger/: logger.h
app/src/main/cpp/samba_client/: SambaClient.cc  SambaClient.h
app/src/main/java/com/google/android/sambadocumentsprovider/: SambaConfiguration.java  SambaProviderApplication.java  ShareManager.java  TaskManager.java
app/src/main/java/com/google/android/sambadocumentsprovider/auth/: AuthActivity.java  AuthorizationTask.java
app/src/main/java/com/google/android/sambadocumentsprovider/base/: AuthFailedException.java  BiResultTask.java  DirectoryEntry.java  DocumentCursor.java  DocumentIdHelper.java  OnTaskFinishedCallback.java
app/src/main/java/com/google/android/sambadocumentsprovider/browsing/: BrowsingException.java  MasterBrowsingProvider.java  NetworkBrowser.java  NetworkBrowsingProvider.java  SmbServer.java
app/src/main/java/com/google/android/sambadocumentsprovider/cache/: CacheResult.java  DocumentCache.java
app/src/main/java/com/google/android/sambadocumentsprovider/document/: DocumentMetadata.java  LoadChildrenTask.java  LoadDocumentTask.java  LoadStatTask.java
app/src/main/res/drawable/: ic_cloud.xml  ic_folder.xml  ic_folder_shared.xml  ic_keyboard.xml  ic_server.xml
app/src/main/res/layout/: activity_main.xml  browsing_list_item_layout.xml  browsing_progress_item_layout.xml
app/src/main/res/menu/: activity.xml
app/src/main/res/values/: colors.xml  config.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
